Added some new features: 1. Created admin controller to separate admin logic 2. Cleaned up template folder(created a folder for admin pages) 3. Added a possibility to block/unlock, update and delete a teacher

--- a/src/main/resources/templates/administration/courses/coursesInfo.html
+++ b/src/main/resources/templates/administration/courses/coursesInfo.html
@@ -48,7 +48,7 @@
 
         <div class="row">
             <div class ="col-lg-3">
-                <a class="btn btn-primary active mb-2" href="/courses/addCourse" role="button">Add Course</a>
+                <a class="btn btn-primary active mb-2" th:href="@{/admin/courses/addCourse}" role="button">Add Course</a>
             </div>
         </div>
 
@@ -88,10 +88,10 @@
                     <td th:text = "${course.getDuration()}"></td>
                     <td th:text = "${course.getDescription()}"></td>
                     <td>
-                        <a th:href = "@{/courses/edit/{id}(id=${course.idCourse})}"
+                        <a th:href = "@{/admin/courses/edit/{id}(id=${course.idCourse})}"
                         class="btn btn-primary">Update</a>
 
-                        <a th:href = "@{/courses/delete/{id}(id=${course.idCourse})}"
+                        <a th:href = "@{/admin/courses/delete/{id}(id=${course.idCourse})}"
                            class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
