--- a/src/main/resources/templates/administration/courses/addCourse.html
+++ b/src/main/resources/templates/administration/courses/addCourse.html
@@ -9,12 +9,13 @@
         crossorigin="anonymous">
 </head>
 <body>
+<br>
 <div class="container">
   <div class="row">
     <div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
       <h1 class="text-center">Add New Course</h1>
       <div class="card-body">
-        <form th:action="@{/courses}" th:object = "${course}" method="POST">
+        <form th:action="@{/admin/courses/addCourse}" th:object = "${course}" method="POST">
           <div class="form-group" >
             <label>Course Name</label>
             <input type = "text" name = "courseName" th:field="*{courseName}" class="form-control" placeholder="Enter the course name">
@@ -27,7 +28,7 @@
 
             <label>Teacher</label>
             <select class="form-control" name = "idTeacher" th:field="*{idTeacher}">
-              <option th:each="teacher:${teachers}" th:value="${teacher.idUser}" th:text="${teacher.firstName}" value=""/>
+              <option th:each="teacher:${teachers}" th:value="${teacher.id}" th:text="${teacher.firstName}" value=""/>
             </select>
 
             <label>Topic</label>
