--- a/src/main/resources/templates/administration/courses/editCourse.html
+++ b/src/main/resources/templates/administration/courses/editCourse.html
@@ -9,34 +9,33 @@
         crossorigin="anonymous">
 </head>
 <body>
+
+<br>
 <div class="container">
   <div class="row">
     <div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
       <h1 class="text-center">Update Course</h1>
       <div class="card-body">
-        <form th:action="@{/courses/{id}(id=${course.idCourse})}" th:object = "${course}" method="POST">
+        <form th:action="@{/admin/courses/edit/{id}(id=${course.idCourse})}" th:object = "${course}" method="POST">
           <div class="form-group" >
             <label>Course Name</label>
             <input type = "text" name = "courseName" th:field="*{courseName}" class="form-control" placeholder="Enter the course name">
 
             <label>Course Date Start</label>
-            <input type = "date" name = "dateStart" th:field="*{dateStart}" class="form-control" placeholder="Enter the course start date">
+            <input type = "date" name = "dateStart" th:field="*{dateStart}" class="form-control" placeholder="Enter the course start date" th:value="*{getDateStart()}">
 
             <label>Course Date End</label>
-            <input type = "date" name = "dateEnd" th:field="*{dateEnd}" class="form-control" placeholder="Enter the course end date">
+            <input type = "date" name = "dateEnd" th:field="*{dateEnd}" class="form-control" placeholder="Enter the course end date" th:value="*{getDateEnd()}">
 
             <label>Teacher id</label>
             <select class="form-control" name = "idTeacher" th:field="*{idTeacher}">
-              <option th:each="teacher:${teachers}" th:value="${teacher.idUser}" th:text="${teacher.firstName}" value=""/>
+              <option th:each="teacher:${teachers}" th:value="${teacher.id}" th:text="${teacher.firstName}" value=""/>
             </select>
 
             <label>Topic id</label>
             <select class="form-control" name = "idTopic" th:field="*{idTopic}">
               <option th:each="topic:${topics}" th:value="${topic.idTopic}" th:text="${topic.topicName}" value=""/>
             </select>
-
-            <!--            <label>Course Date End</label>-->
-            <!--            <input type = "date" name = "dateEnd" th:field="*{dateEnd}" class="form-control" placeholder="Enter the course end date">-->
 
             <label>Course Description</label>
             <textarea class="form-control" rows="3" name="description" th:field="*{description}" placeholder="Description"></textarea>
