--- a/src/main/resources/templates/administration/teachers/teachersInfo.html
+++ b/src/main/resources/templates/administration/teachers/teachersInfo.html
@@ -19,28 +19,23 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-<!--    <nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-<!--        <a class="navbar-brand" href="#">Navbar</a>-->
-<!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
-<!--        <div class="collapse navbar-collapse" id="navbarNav">-->
-<!--            <ul class="navbar-nav">-->
-<!--                <li class="nav-item active">-->
-<!--                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Features</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Pricing</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link disabled" href="#">Disabled</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </nav>-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item ps-2 pe-4">
+                    <a class="nav-link" href="/register">Sign up</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 
 <div class="container">
     <div class="row">
@@ -49,7 +44,7 @@
 
     <div class="row">
         <div class="col-lg-3">
-            <a class="btn btn-primary active mb-2" href="/teachers/addTeacher" role="button">Add Teacher</a>
+            <a class="btn btn-primary active mb-2" th:href="@{/admin/teachers/addTeacher}" role="button">Add Teacher</a>
         </div>
     </div>
 
@@ -69,10 +64,10 @@
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
             <tr>
-                <th>Teacher name</th>
-                <th>Teacher lastname</th>
-                <th>E-mail</th>
-                <th>Actions</th>
+                <th style="width: auto">Teacher name</th>
+                <th style="width: auto">Teacher lastname</th>
+                <th style="width: auto">E-mail</th>
+                <th style="width: auto">Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -80,12 +75,17 @@
                 <td th:text="${teacher.getFirstName()}"></td>
                 <td th:text="${teacher.getSecondName()}"></td>
                 <td th:text="${teacher.getEmail()}"></td>
-                <td>
-                    <a th:href="@{/teachers/edit/{id}(id=${teacher.idUser})}"
-                       class="btn btn-primary">Update</a>
+                <td class="d-flex justify-content-start">
+                    <a th:href="@{/admin/teachers/edit/{id}(id=${teacher.id})}"
+                       class="btn btn-primary me-2">Update</a>
 
-                    <a th:href="@{/teachers/delete/{id}(id=${teacher.idUser})}"
-                       class="btn btn-danger">Delete</a>
+                    <a th:href="@{/admin/teachers/delete/{id}(id=${teacher.id})}"
+                       class="btn btn-danger me-2">Delete</a>
+
+                    <form class="" th:action="@{/admin/setAccountStatus/{id}(id = ${teacher.id})}" method="post">
+                        <span th:if="${teacher.isBlocked == false}"><button type="submit" class="btn btn-primary me-2">Block</button></span>
+                        <span th:if="${teacher.isBlocked == true}"><button type="submit" class="btn btn-primary me-2">Unlock</button></span>
+                    </form>
                 </td>
             </tr>
             </tbody>
