--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -63,9 +63,9 @@
     <div class="container h-100">
         <div class="row justify-content-sm-center h-100">
             <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
-<!--                <div class="text-center my-5">-->
-<!--                    <img src="/assets/bus-icon.png" alt="" width="80" th:src="@{/assets/bus-icon.png}">-->
-<!--                </div>-->
+                <!--                <div class="text-center my-5">-->
+                <!--                    <img src="/assets/bus-icon.png" alt="" width="80" th:src="@{/assets/bus-icon.png}">-->
+                <!--                </div>-->
                 <div class="card shadow-lg mb-4">
                     <div class="card-body p-5">
                         <h1 class="fs-4 card-title text-center fw-bold mb-4">Sign Up</h1>
@@ -129,7 +129,9 @@
                             <p>
                             <div th:if="${param.success}">
                                 <div class="alert alert-success">
-                                    You've successfully registered. You may now <a href="#" th:href="@{/sign-in}" class="text-dark">Sign In</a> into System.
+                                    You've successfully registered. You may now <a href="#" th:href="@{/sign-in}"
+                                                                                   class="text-dark">Sign In</a> into
+                                    System.
                                 </div>
                             </div>
                             <div th:if="${param.error}">
