--- a/src/main/resources/templates/administration/courses/coursesInfo.html
+++ b/src/main/resources/templates/administration/courses/coursesInfo.html
@@ -16,7 +16,8 @@
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 <!--    <nav class="navbar navbar-expand-lg navbar-light bg-light">-->
 <!--        <a class="navbar-brand" href="#">Navbar</a>-->
@@ -41,63 +42,64 @@
 <!--        </div>-->
 <!--    </nav>-->
 
-    <div class = "container">
-        <div class ="row">
-            <h1>List Courses</h1>
-        </div>
+<div class="container">
+    <div class="row">
+        <h1>List Courses</h1>
+    </div>
 
-        <div class="row">
-            <div class ="col-lg-3">
-                <a class="btn btn-primary active mb-2" th:href="@{/admin/courses/addCourse}" role="button">Add Course</a>
-            </div>
-        </div>
-
-        <div class="dropdown show mb-2">
-            <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Sort By...
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">Name (a-z)</a>
-                <a class="dropdown-item" href="#">Name (z-a)</a>
-                <a class="dropdown-item" href="#">Duration</a>
-            </div>
-        </div>
-
-
-        <div class="col-md">
-            <table class = "table table-striped table-bordered">
-                <thead class="table-dark">
-                <tr>
-                    <th>Course name</th>
-                    <th>Topic</th>
-                    <th>Teacher</th>
-                    <th>Date start</th>
-                    <th>Date end</th>
-                    <th>Duration in days</th>
-                    <th>Description</th>
-                    <th>Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each = "course: ${courses}">
-                    <td th:text = "${course.getCourseName()}"></td>
-                    <td th:text = "${course.getIdTopic()}"></td>
-                    <td th:text = "${course.getIdTeacher()}"></td>
-                    <td th:text = "${course.getDateStart()}"></td>
-                    <td th:text = "${course.getDateEnd()}"></td>
-                    <td th:text = "${course.getDuration()}"></td>
-                    <td th:text = "${course.getDescription()}"></td>
-                    <td>
-                        <a th:href = "@{/admin/courses/edit/{id}(id=${course.idCourse})}"
-                        class="btn btn-primary">Update</a>
-
-                        <a th:href = "@{/admin/courses/delete/{id}(id=${course.idCourse})}"
-                           class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+    <div class="row">
+        <div class="col-lg-3">
+            <a class="btn btn-primary active mb-2" th:href="@{/admin/courses/addCourse}" role="button">Add Course</a>
         </div>
     </div>
+
+    <div class="dropdown show mb-2">
+        <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+            Sort By...
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="#">Name (a-z)</a>
+            <a class="dropdown-item" href="#">Name (z-a)</a>
+            <a class="dropdown-item" href="#">Duration</a>
+        </div>
+    </div>
+
+
+    <div class="col-md">
+        <table class="table table-striped table-bordered">
+            <thead class="table-dark">
+            <tr>
+                <th>Course name</th>
+                <th>Topic</th>
+                <th>Teacher</th>
+                <th>Date start</th>
+                <th>Date end</th>
+                <th>Duration in days</th>
+                <th>Description</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="course: ${courses}">
+                <td th:text="${course.getCourseName()}"></td>
+                <td th:text="${course.getIdTopic()}"></td>
+                <td th:text="${course.getIdTeacher()}"></td>
+                <td th:text="${course.getDateStart()}"></td>
+                <td th:text="${course.getDateEnd()}"></td>
+                <td th:text="${course.getDuration()}"></td>
+                <td th:text="${course.getDescription()}"></td>
+                <td>
+                    <a th:href="@{/admin/courses/edit/{id}(id=${course.idCourse})}"
+                       class="btn btn-primary">Update</a>
+
+                    <a th:href="@{/admin/courses/delete/{id}(id=${course.idCourse})}"
+                       class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
 </html>
