--- a/src/main/resources/templates/administration/courses/editCourse.html
+++ b/src/main/resources/templates/administration/courses/editCourse.html
@@ -1,53 +1,80 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-  <meta charset="UTF-8">
-  <title>Elective</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-        crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Elective</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+          crossorigin="anonymous">
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <div sec:authorize="isAuthenticated()">
+                <a class="nav-link me-2" th:href="@{/logout}">Log out</a>
+            </div>
+            <div class="d-flex flex-row" sec:authorize="isAnonymous()">
+                <a class="nav-link" th:href="@{/login}">Log in</a>
+                <a class="nav-link me-2" th:href="@{/register}">Sign up</a>
+            </div>
+        </ul>
+    </div>
+</nav>
+
 <br>
 <div class="container">
-  <div class="row">
-    <div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-      <h1 class="text-center">Update Course</h1>
-      <div class="card-body">
-        <form th:action="@{/admin/courses/edit/{id}(id=${course.idCourse})}" th:object = "${course}" method="POST">
-          <div class="form-group" >
-            <label>Course Name</label>
-            <input type = "text" name = "courseName" th:field="*{courseName}" class="form-control" placeholder="Enter the course name">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+            <h1 class="text-center">Update Course</h1>
+            <div class="card-body">
+                <form th:action="@{/admin/courses/edit/{id}(id=${course.idCourse})}" th:object="${course}"
+                      method="POST">
+                    <div class="form-group">
+                        <label>Course Name</label>
+                        <input type="text" name="courseName" th:field="*{courseName}" class="form-control"
+                               placeholder="Enter the course name">
 
-            <label>Course Date Start</label>
-            <input type = "date" name = "dateStart" th:field="*{dateStart}" class="form-control" placeholder="Enter the course start date" th:value="*{getDateStart()}">
+                        <label>Course Date Start</label>
+                        <input type="date" name="dateStart" th:field="*{dateStart}" class="form-control"
+                               placeholder="Enter the course start date" th:value="*{getDateStart()}">
 
-            <label>Course Date End</label>
-            <input type = "date" name = "dateEnd" th:field="*{dateEnd}" class="form-control" placeholder="Enter the course end date" th:value="*{getDateEnd()}">
+                        <label>Course Date End</label>
+                        <input type="date" name="dateEnd" th:field="*{dateEnd}" class="form-control"
+                               placeholder="Enter the course end date" th:value="*{getDateEnd()}">
 
-            <label>Teacher id</label>
-            <select class="form-control" name = "idTeacher" th:field="*{idTeacher}">
-              <option th:each="teacher:${teachers}" th:value="${teacher.id}" th:text="${teacher.firstName}" value=""/>
-            </select>
+                        <label>Teacher id</label>
+                        <select class="form-control" name="idTeacher" th:field="*{idTeacher}">
+                            <option th:each="teacher:${teachers}" th:value="${teacher.id}"
+                                    th:text="${teacher.firstName}" value=""/>
+                        </select>
 
-            <label>Topic id</label>
-            <select class="form-control" name = "idTopic" th:field="*{idTopic}">
-              <option th:each="topic:${topics}" th:value="${topic.idTopic}" th:text="${topic.topicName}" value=""/>
-            </select>
+                        <label>Topic id</label>
+                        <select class="form-control" name="idTopic" th:field="*{idTopic}">
+                            <option th:each="topic:${topics}" th:value="${topic.idTopic}" th:text="${topic.topicName}"
+                                    value=""/>
+                        </select>
 
-            <label>Course Description</label>
-            <textarea class="form-control" rows="3" name="description" th:field="*{description}" placeholder="Description"></textarea>
-          </div>
+                        <label>Course Description</label>
+                        <textarea class="form-control" rows="3" name="description" th:field="*{description}"
+                                  placeholder="Description"></textarea>
+                    </div>
 
-          <div class="footer-body">
-            <button type="submit" class = "btn btn-primary">Submit</button>
-          </div>
-        </form>
-      </div>
+                    <div class="footer-body">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
