--- a/src/main/resources/templates/administration/users/editUser.html
+++ b/src/main/resources/templates/administration/users/editUser.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Elective</title>
@@ -9,12 +10,41 @@
           crossorigin="anonymous">
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <div sec:authorize="isAuthenticated()">
+                <a class="nav-link me-2" th:href="@{/logout}">Log out</a>
+            </div>
+            <div class="d-flex flex-row" sec:authorize="isAnonymous()">
+                <a class="nav-link" th:href="@{/login}">Log in</a>
+                <a class="nav-link me-2" th:href="@{/register}">Sign up</a>
+            </div>
+        </ul>
+    </div>
+</nav>
+
+<br>
+
 <div class="container">
     <div class="row mt-5">
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center mt-3">Update Teacher</h1>
+            <div class="row">
+                <span th:if="${role == 'teacher'}">
+                    <h1 class="text-center mt-3">Update Teacher</h1>
+                </span>
+                <span th:if="${role == 'student'}">
+                    <h1 class="text-center mt-3">Update Student</h1>
+                 </span>
+            </div>
             <div class="card-body">
-                <form th:action="@{/admin/teachers/edit/{id}(id=${teacher.id})}" th:object="${teacher}" method="POST">
+                <form th:action="@{/admin/users/edit/{id}(id=${user.id})}" th:object="${user}" method="POST">
                     <div class="form-group">
                         <label class="mb-1">Teacher Name</label>
                         <input type="text" name="firstName" th:field="*{firstName}" class="form-control mb-2"
