--- a/src/main/resources/templates/administration/courses/coursesInfo.html
+++ b/src/main/resources/templates/administration/courses/coursesInfo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Elective</title>
@@ -19,28 +20,24 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-<!--    <nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-<!--        <a class="navbar-brand" href="#">Navbar</a>-->
-<!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
-<!--        <div class="collapse navbar-collapse" id="navbarNav">-->
-<!--            <ul class="navbar-nav">-->
-<!--                <li class="nav-item active">-->
-<!--                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Features</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Pricing</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link disabled" href="#">Disabled</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </nav>-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <div sec:authorize="isAuthenticated()">
+                <a class="nav-link me-2" th:href="@{/logout}">Log out</a>
+            </div>
+            <div class="d-flex flex-row" sec:authorize="isAnonymous()">
+                <a class="nav-link" th:href="@{/login}">Log in</a>
+                <a class="nav-link me-2" th:href="@{/register}">Sign up</a>
+            </div>
+        </ul>
+    </div>
+</nav>
 
 <div class="container">
     <div class="row">
@@ -83,8 +80,8 @@
             <tbody>
             <tr th:each="course: ${courses}">
                 <td th:text="${course.getCourseName()}"></td>
-                <td th:text="${course.getIdTopic()}"></td>
-                <td th:text="${course.getIdTeacher()}"></td>
+                <td th:text="${course.getTopic().getTopicName()}"></td>
+                <td th:text="${course.getNameAndSurnameOfTeacher(course.getTeacher())}"></td>
                 <td th:text="${course.getDateStart()}"></td>
                 <td th:text="${course.getDateEnd()}"></td>
                 <td th:text="${course.getDuration()}"></td>
