1. Created new relationship between User and Course entities (many-to-many), added one more class for this relation for creating extra fields like "grade" and "joinDate", this will be a journal. 2. Created repository interface, service interface and service implementation class for Journal entity. 3. Also, I made some changes on main-page: now, if you anonymous user, you will see button "Log in to assign" on each course card. When you signed in, u will see button "Assign" on course, and if you are already assigned, you will see info "You have joined this course!" 4.In CourseController 2 changes: 1) Created method to assign user on course. 2) In showMainPage method was added a function to find user's assigned courses.

--- a/src/main/resources/templates/administration/courses/coursesInfo.html
+++ b/src/main/resources/templates/administration/courses/coursesInfo.html
@@ -81,7 +81,7 @@
             <tr th:each="course: ${courses}">
                 <td th:text="${course.getCourseName()}"></td>
                 <td th:text="${course.getTopic().getTopicName()}"></td>
-                <td th:text="${course.getNameAndSurnameOfTeacher(course.getTeacher())}"></td>
+                <td th:text="${course.getTeacher().getFirstName() + ' ' + course.getTeacher().getSecondName()}"></td>
                 <td th:text="${course.getDateStart()}"></td>
                 <td th:text="${course.getDateEnd()}"></td>
                 <td th:text="${course.getDuration()}"></td>
