--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-  <meta charset="UTF-8">
-  <title>Elective</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-        crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Elective</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+          crossorigin="anonymous">
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -21,58 +21,78 @@
         crossorigin="anonymous"></script>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-  <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-    <ul class="navbar-nav">
-      <div sec:authorize="isAuthenticated()">
-        <a class="nav-link me-2" th:href="@{/logout}">Log out</a>
-      </div>
-      <div class="d-flex flex-row" sec:authorize="isAnonymous()">
-        <a class="nav-link" th:href="@{/login}">Log in</a>
-        <a class="nav-link me-2" th:href="@{/register}">Sign up</a>
-      </div>
-    </ul>
-  </div>
+    <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <div sec:authorize="isAuthenticated()">
+                <a class="nav-link me-2" th:href="@{/logout}">Log out</a>
+            </div>
+            <div class="d-flex flex-row" sec:authorize="isAnonymous()">
+                <a class="nav-link" th:href="@{/login}">Log in</a>
+                <a class="nav-link me-2" th:href="@{/register}">Sign up</a>
+            </div>
+        </ul>
+    </div>
 </nav>
 <br>
 <div class="container">
-  <div class="d-flex justify-content-center align-items-center h-100">
-    <div class="text-center">
-      <h1>Welcome on Main Page!</h1>
-    </div>
-  </div>
-
-
-
-  <div class="container">
-    <div class="dropdown show mb-2">
-      <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-         aria-haspopup="true" aria-expanded="false">
-        Sort By...
-      </a>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="#">Name (a-z)</a>
-        <a class="dropdown-item" href="#">Name (z-a)</a>
-        <a class="dropdown-item" href="#">Duration</a>
-      </div>
-    </div>
-    <div class="row">
-      <div th:each="course : ${courses}" class="col-lg-4 col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h4 class="card-title" th:text="${course.courseName}"></h4>
-            <h6 class="card-subtitle mb-2 text-muted" th:text="'Topic: ' + ${course.topic.topicName}"></h6>
-            <p class="card-text" th:text="${course.description}"></p>
-            <p class="card-text"><small class="text-muted" th:text="${course.dateStart}"></small></p>
-          </div>
+    <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-center">
+            <h1>Welcome on Main Page!</h1>
         </div>
-      </div>
     </div>
-  </div>
+
+
+    <div class="container">
+        <div class="dropdown show mb-2">
+            <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+               aria-haspopup="true" aria-expanded="false">
+                Sort By...
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">Name (a-z)</a>
+                <a class="dropdown-item" href="#">Name (z-a)</a>
+                <a class="dropdown-item" href="#">Duration</a>
+            </div>
+        </div>
+        <div class="row">
+            <div th:each="course : ${courses}" class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h4 class="card-title mb-2" th:text="${course.courseName}"></h4>
+                        <h6 class="card-subtitle mb-2 text-muted" th:text="'Topic: ' + ${course.topic.topicName}"></h6>
+                        <h6 class="card-subtitle mb-2 text-muted"
+                            th:text="'Teacher: ' + ${course.getTeacher().getFirstName() + ' ' + course.getTeacher().getSecondName()}"></h6>
+                        <h6 class="card-subtitle mb-2 text-muted"
+                            th:text="'Duration: ' + ${course.duration + ' days'}"></h6>
+                        <p class="card-text" th:text="${course.description}"></p>
+                        <p class="card-text"><small class="text-muted" th:text="${course.dateStart}"></small></p>
+                        <div class="d-flex justify-content-center">
+                            <div sec:authorize="isAuthenticated()">
+                                <form th:action="@{/assign}" method="POST">
+                                    <input type="hidden" name="userId" th:value="${userId}">
+                                    <input type="hidden" name="courseId" th:value="${course.idCourse}">
+                                    <span th:if="${course.assignable}"><button
+                                            class="btn btn-light me-2">You have joined this course!</button>
+                                    </span>
+                                    <span th:unless="${course.assignable}"><button
+                                            type="submit" class="btn btn-success">Assign</button>
+                                    </span>
+                                </form>
+                            </div>
+                            <div class="d-flex flex-row" sec:authorize="isAnonymous()">
+                                <a class="btn btn-success" th:href="@{/login}">Log in to assign</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
