Created a function to sort a courses view on main page and admin page;

--- a/src/main/resources/templates/administration/courses/coursesInfo.html
+++ b/src/main/resources/templates/administration/courses/coursesInfo.html
@@ -56,9 +56,10 @@
             Sort By...
         </a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="#">Name (a-z)</a>
-            <a class="dropdown-item" href="#">Name (z-a)</a>
-            <a class="dropdown-item" href="#">Duration</a>
+            <a class="dropdown-item" href="/main-page?sort=name(a-z)">Name (a-z)</a>
+            <a class="dropdown-item" href="/main-page?sort=name(z-a)">Name (z-a)</a>
+            <a class="dropdown-item" href="/main-page?sort=duration">Duration</a>
+            <a class="dropdown-item" href="/main-page?sort=number-of-students">Number of Students</a>
         </div>
     </div>
 
