--- a/src/main/resources/templates/administration/courses/editCourse.html
+++ b/src/main/resources/templates/administration/courses/editCourse.html
@@ -45,22 +45,22 @@
 
                         <label>Course Date Start</label>
                         <input type="date" name="dateStart" th:field="*{dateStart}" class="form-control"
-                               placeholder="Enter the course start date" th:value="*{getDateStart()}">
+                               placeholder="Enter the course start date">
 
                         <label>Course Date End</label>
                         <input type="date" name="dateEnd" th:field="*{dateEnd}" class="form-control"
-                               placeholder="Enter the course end date" th:value="*{getDateEnd()}">
+                               placeholder="Enter the course end date">
 
                         <label>Teacher id</label>
-                        <select class="form-control" name="idTeacher" th:field="*{idTeacher}">
-                            <option th:each="teacher:${teachers}" th:value="${teacher.id}"
-                                    th:text="${teacher.firstName}" value=""/>
+                        <select class="form-control" name="teacher">
+                            <option th:each="t:${teachers}" th:value="${t.id}"
+                                    th:text="${t.firstName}" th:selected="${t.id == course.teacher.id}"/>
                         </select>
 
                         <label>Topic id</label>
-                        <select class="form-control" name="idTopic" th:field="*{idTopic}">
+                        <select class="form-control" name="topic">
                             <option th:each="topic:${topics}" th:value="${topic.idTopic}" th:text="${topic.topicName}"
-                                    value=""/>
+                                    th:selected="${topic.idTopic == course.topic.idTopic}"/>
                         </select>
 
                         <label>Course Description</label>
