Added topics list view and view of courses related to a specific topic

--- a/src/main/resources/templates/administration/topics/topicInfo.html
+++ b/src/main/resources/templates/administration/topics/topicInfo.html
@@ -45,7 +45,7 @@
 
         <div class="row">
             <div class ="col-lg-3">
-                <a class="btn btn-primary active mb-2" th:href="@{/admin/topics/addTopic}" role="button">Add Topic</a>
+                <a class="btn btn-primary active mb-2" th:href="@{/admin/topics/add-topic}" role="button">Add Topic</a>
             </div>
         </div>
 
