--- a/src/main/resources/templates/administration/topics/addTopic.html
+++ b/src/main/resources/templates/administration/topics/addTopic.html
@@ -37,7 +37,7 @@
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
             <h1 class="text-center">Add New Topic</h1>
             <div class="card-body">
-                <form th:action="@{/admin/topics/addTopic}" th:object="${topic}" method="POST">
+                <form th:action="@{/admin/topics/add-topic}" th:object="${topic}" method="POST">
                     <div class="form-group">
                         <label>Topic Name</label>
                         <input type="text" name="courseName" th:field="*{topicName}" class="form-control mb-2"
