--- a/src/main/resources/templates/client/topics.html
+++ b/src/main/resources/templates/client/topics.html
@@ -50,7 +50,7 @@
 <div class="container">
     <div class="row">
         <div class="col center-column text-center">
-            <h1>Teachers</h1>
+            <h1>Topics</h1>
         </div>
 
 
@@ -67,25 +67,15 @@
             <!--        <a class="dropdown-item" href="/main-page?sort=number-of-students">Number of Students</a>-->
             <!--      </div>-->
             <!--    </div>-->
-            <div class="row">
-                <div th:each="teacher : ${teachers}" class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-center mb-2">
-                                <img height="210" width="210" th:src="@{'data:image/png;base64,' + ${teacher.base64Image}}"/>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <h5 class="card-title" th:text="${teacher.firstName} + ' ' + ${teacher.secondName}"></h5>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <form th:action="@{/main-page/teacher/courses}" method="GET">
-                                    <input type="hidden" name="teacherId" th:value="${teacher.id}">
-                                    <button
-                                            class="btn btn-success mt-2 mb-2">See courses
-                                    </button>
-                                </form>
-                            </div>
-                        </div>
+            <div class="list-group list-group-flush">
+                <div th:each="topic : ${topics}" class="list-group-item d-inline-block text-center">
+                    <div class="d-flex justify-content-center">
+                        <form th:action="@{/main-page/topic/courses}" method="GET">
+                            <input type="hidden" name="topic" th:value="${topic.topicName}">
+                            <button
+                                    class="btn btn-success mt-2 mb-2 text-uppercase" th:text="${topic.topicName}">
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
