--- a/src/main/resources/templates/client/topics.html
+++ b/src/main/resources/templates/client/topics.html
@@ -34,6 +34,10 @@
     </button>
     <a class="nav-link me-4" href="/main-page/teachers">Teachers</a>
     <a class="nav-link me-4" href="/main-page/topics">Topics</a>
+    <form th:action="@{/main-page/profile}" method="GET">
+        <input type="hidden" name="userId" th:value="${userId}">
+        <button class="nav-link me-4">Profile</button>
+    </form>
     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <div sec:authorize="isAuthenticated()">
