--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -53,7 +53,7 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div th:if="${param.succes}">
-                <div class="alert alert-info">You've succesfully registered!</div>
+                <div class="alert alert-info">You've successfully registered!</div>
             </div>
         </div>
     </div>
