--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="card-footer py-3 border-0">
                         <div class="text-center">
-                            Already have an account? <a href="#" th:href="@{/sign-in}" class="text-dark">Login</a>
+                            Already have an account? <a th:href="@{/sign-in}" class="text-dark">Login</a>
                         </div>
                     </div>
                 </div>
